--- a/content/resources/mit18_103f13_pset1.md
+++ b/content/resources/mit18_103f13_pset1.md
@@ -4,6 +4,7 @@ description: This is a resource file that contains information regarding problem
   1.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-103-fourier-analysis-fall-2013/da2c68c10721f3dc7a4c74c84b1a14dc_MIT18_103F13_pset1.pdf
 file_type: application/pdf
+parent_uid: e888107f-6ea2-091e-b47e-13640f15c7af
 resourcetype: Document
 title: 18.103 Fourier Analysis, Problem Set 1
 uid: da2c68c1-0721-f3dc-7a4c-74c84b1a14dc
