--- a/content/resources/mit18_103f13_pset10.md
+++ b/content/resources/mit18_103f13_pset10.md
@@ -4,6 +4,7 @@ description: This is a resource file that contains information regarding problem
   10.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-103-fourier-analysis-fall-2013/c5c4ab50f927d82414ccabacf2d3cea3_MIT18_103F13_pset10.pdf
 file_type: application/pdf
+parent_uid: e888107f-6ea2-091e-b47e-13640f15c7af
 resourcetype: Document
 title: 18.103 Fourier Analysis, Problem Set 10
 uid: c5c4ab50-f927-d824-14cc-abacf2d3cea3
