--- a/content/resources/mit18_103f13_pset11.md
+++ b/content/resources/mit18_103f13_pset11.md
@@ -4,6 +4,7 @@ description: This is a resource file that contains information regarding problem
   11.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-103-fourier-analysis-fall-2013/2e63ed2682f2cf777b5910e7a985aa92_MIT18_103F13_pset11.pdf
 file_type: application/pdf
+parent_uid: e888107f-6ea2-091e-b47e-13640f15c7af
 resourcetype: Document
 title: 18.103 Fourier Analysis, Problem Set 11
 uid: 2e63ed26-82f2-cf77-7b59-10e7a985aa92
