--- a/content/resources/mit18_103f13_pset5.md
+++ b/content/resources/mit18_103f13_pset5.md
@@ -4,6 +4,7 @@ description: This is a resource file that contains information regarding problem
   5.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-103-fourier-analysis-fall-2013/edfb94debb0bc4111167c35c789fee2f_MIT18_103F13_pset5.pdf
 file_type: application/pdf
+parent_uid: e888107f-6ea2-091e-b47e-13640f15c7af
 resourcetype: Document
 title: 18.103 Fourier Analysis, Problem Set 5
 uid: edfb94de-bb0b-c411-1167-c35c789fee2f
