--- a/content/resources/mit18_103f13_pset6.md
+++ b/content/resources/mit18_103f13_pset6.md
@@ -4,6 +4,7 @@ description: This is a resource file that contains information regarding problem
   6.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-103-fourier-analysis-fall-2013/206051202c959e1dbd6c4fb5ced7494c_MIT18_103F13_pset6.pdf
 file_type: application/pdf
+parent_uid: e888107f-6ea2-091e-b47e-13640f15c7af
 resourcetype: Document
 title: 18.103 Fourier Analysis, Problem Set 6
 uid: 20605120-2c95-9e1d-bd6c-4fb5ced7494c
