--- a/content/resources/mit18_103f13_pset7.md
+++ b/content/resources/mit18_103f13_pset7.md
@@ -4,6 +4,7 @@ description: This is a resource file that contains information regarding problem
   7.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-103-fourier-analysis-fall-2013/0f64cc5afcab7d4b5afcffc50b8fb3a7_MIT18_103F13_pset7.pdf
 file_type: application/pdf
+parent_uid: e888107f-6ea2-091e-b47e-13640f15c7af
 resourcetype: Document
 title: 18.103 Fourier Analysis, Problem Set 7
 uid: 0f64cc5a-fcab-7d4b-5afc-ffc50b8fb3a7
