--- a/content/resources/mit18_103f13_pset8.md
+++ b/content/resources/mit18_103f13_pset8.md
@@ -4,6 +4,7 @@ description: This is a resource file that contains information regarding problem
   8.
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/18-103-fourier-analysis-fall-2013/9369dd190c3e352de81770e5b212e364_MIT18_103F13_pset8.pdf
 file_type: application/pdf
+parent_uid: e888107f-6ea2-091e-b47e-13640f15c7af
 resourcetype: Document
 title: 18.103 Fourier Analysis, Problem Set 8
 uid: 9369dd19-0c3e-352d-e817-70e5b212e364
